Fixed contact us from stacking too early on smaller displays.

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -46,8 +46,6 @@
       @extend .row;
 
       .valerie, .justin {
-        @extend .col-md-2;
-
         ul {
           @extend .list-inline;
           li {
@@ -57,8 +55,24 @@
       }
 
       .valerie {
-        @extend .col-md-offset-4;
+        @extend .col-xs-6;
+
+        @extend .col-sm-3;
+        @extend .col-sm-offset-3;
+
+        @extend .col-md-3;
+        @extend .col-md-offset-3;
+
+        @extend .col-lg-3;
+        @extend .col-lg-offset-3;
       }
+
+      .justin {
+        @extend .col-xs-6;
+        @extend .col-sm-3;
+        @extend .col-md-2;
+      }
+
     } //section
   } //#contact-us
 
@@ -77,4 +91,9 @@ footer {
   border-top: ($line-height-computed * 2) $brand-section-bg solid;
   background: $brand-footer-bg image_url('footer-bg.jpg') no-repeat top center;
   min-height: 182px;
+
+  p:first-child {
+    margin-top: $line-height-computed;
+    margin-bottom: 0;
+  }
 }
